ci-pipeline/config-root/cluster/required-labels-constraint.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START anthos_config_management_config_root_cluster_k8srequiredlabels_all_must_have_cost_center]
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-cost-center
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Namespace
  parameters:
    labels:
    - allowedRegex: ^[a-zA-Z]+.foo-corp.com$
      key: cost-center
    message: All namespaces must have a `cost-center` label that points to your division
# [END anthos_config_management_config_root_cluster_k8srequiredlabels_all_must_have_cost_center]
---
